[gd_scene load_steps=4 format=3 uid="uid://bbl10g0l15cvd"]

[ext_resource type="Script" uid="uid://cariqjy1k5du5" path="res://Objects/BasilPot/basil_pot.gd" id="1_pi1qu"]
[ext_resource type="Texture2D" uid="uid://c2r1ao17koxdf" path="res://Objects/BasilPot/BasilPot.png" id="1_rov0g"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pi1qu"]

[node name="BasilPot" type="RigidBody2D" groups=["Projectiles"]]
contact_monitor = true
max_contacts_reported = 17
script = ExtResource("1_pi1qu")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-0.99999994, -9.999999)
scale = Vector2(0.05, 0.05)
texture = ExtResource("1_rov0g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pi1qu")

[node name="SelfdestructTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SelfdestructTimer" to="." method="_on_selfdestruct_timer_timeout"]
